updated crud functionality for itemTag

--- a/TodoListAPI.Web/TodoListAPI.Web.csproj
+++ b/TodoListAPI.Web/TodoListAPI.Web.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TodoListAPI.Application\TodoListAPI.Application.csproj" />
+    <ProjectReference Include="..\TodoListAPI.Infrastructure\TodoListAPI.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
