--- a/TodoListAPI.Application/TodoListAPI.Application.csproj
+++ b/TodoListAPI.Application/TodoListAPI.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -8,18 +8,16 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TodoListAPI.Domain\TodoListAPI.Domain.csproj" />
-    <ProjectReference Include="..\TodoListAPI.Infrastructure\TodoListAPI.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ItemTag\Commands\DeleteTag\" />
-    <Folder Include="ItemTag\Commands\UpdateTag\" />
     <Folder Include="ItemCategory\" />
-    <Folder Include="ItemTag\Queries\GetItemTag\" />
+    <Folder Include="ItemTags\Queries\GetItemTag\" />
     <Folder Include="TodoList\" />
   </ItemGroup>
 
