get categories, create category implemented

--- a/TodoListAPI.Application/TodoListAPI.Application.csproj
+++ b/TodoListAPI.Application/TodoListAPI.Application.csproj
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="ItemCategory\" />
+    <Folder Include="ItemCategories\Commands\DeleteCategory\" />
+    <Folder Include="ItemCategories\Commands\UpdateCategory\" />
     <Folder Include="ItemTags\Queries\GetItemTag\" />
     <Folder Include="TodoList\" />
   </ItemGroup>
